@@ -13,12 +13,18 @@ from pydantic import validate_call
 from sortedcontainers import SortedDict, SortedSet
 
 from find_work.core.cli.options import MainOptions
+from find_work.core.types.results import (
+    PkgcheckResult,
+    PkgcheckResultPriority,
+)
 
 from find_work.plugins.pkgcheck_scan.options import PkgcheckOptions
 
 
 @validate_call
-def do_pkgcheck_scan(options: MainOptions) -> SortedDict[str, SortedSet]:
+def do_pkgcheck_scan(options: MainOptions) -> SortedDict[
+    str, SortedSet[PkgcheckResult]
+]:
     plugin_options = PkgcheckOptions.model_validate(
         options.children["pkgcheck"]
     )
@@ -37,7 +43,7 @@ def do_pkgcheck_scan(options: MainOptions) -> SortedDict[str, SortedSet]:
     if plugin_options.keywords:
         cli_opts += ["--keywords", ",".join(plugin_options.keywords)]
 
-    data: SortedDict[str, SortedSet] = SortedDict()
+    data: SortedDict[str, SortedSet[PkgcheckResult]] = SortedDict()
     for result in pkgcheck.scan(cli_opts):
         if plugin_options.message not in result.desc:
             continue
@@ -51,5 +57,14 @@ def do_pkgcheck_scan(options: MainOptions) -> SortedDict[str, SortedSet]:
                     break
             else:
                 continue
-        data.setdefault(package, SortedSet(key=str)).add(result)
+        data.setdefault(package, SortedSet()).add(
+            PkgcheckResult(
+                priority=PkgcheckResultPriority(
+                    level=result.level or "N/A",
+                    color=result.color or "",
+                ),
+                name=result.name or "N/A",
+                desc=result.desc or "N/A",
+            )
+        )
     return data
