@@ -18,7 +18,7 @@ requires-python = ">=3.11"
 dependencies = [
     "click",
     "click-aliases",
-    "find-work>=0.91",
+    "find-work>=0.990",
     "gentoopm<2",
     "pkgcheck",
     "pydantic<3,>=2",
@@ -43,7 +43,7 @@ test = [
     "pytest-import-check",
 ]
 
-[project.entry-points."find_work.plugins"]
+[project.entry-points."find_work.plugins.v1"]
 pkgcheck = "find_work.plugins.pkgcheck_scan"
 
 [project.urls]
